[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/textures/logo.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/NEON CLUB MUSIC_bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/ui/main_menu/main_menu.gd" type="Script" id=3]
[ext_resource path="res://scripts/ui/main_menu/1_player_option.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui/main_menu/2_players_option.gd" type="Script" id=5]
[ext_resource path="res://scripts/ui/main_menu/difficulty_menu.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/blip_select.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/textures/ui_ninepatch.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 37
use_filter = true
extra_spacing_top = 23
extra_spacing_bottom = 11
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
use_filter = true
extra_spacing_top = 19
extra_spacing_bottom = 8
font_data = ExtResource( 2 )

[sub_resource type="Environment" id=3]
background_mode = 4
dof_blur_near_enabled = true
dof_blur_near_amount = 0.04
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/5 = false

[node name="main_menu" type="Node"]

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[node name="logo" type="TextureRect" parent="background"]
modulate = Color( 2.79868, 2.79868, 2.79868, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -208.0
margin_top = 57.0
margin_right = 625.0
margin_bottom = 505.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true

[node name="modes" type="VBoxContainer" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = 280.0
margin_right = -192.0
margin_bottom = -56.0
alignment = 1
script = ExtResource( 3 )

[node name="1_player" type="Label" parent="background/modes"]
margin_top = 58.0
margin_right = 640.0
margin_bottom = 130.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "1 Player"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="2_players" type="Label" parent="background/modes"]
margin_top = 134.0
margin_right = 640.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
text = "2 Players"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="difficulty" type="NinePatchRect" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 100.0
margin_right = -300.0
margin_bottom = -100.0
texture = ExtResource( 8 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
script = ExtResource( 6 )

[node name="modes" type="VBoxContainer" parent="background/difficulty"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
alignment = 1

[node name="easy" type="Label" parent="background/difficulty/modes"]
margin_top = 29.0
margin_right = 324.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 2 )
text = "easy"
align = 1
valign = 1

[node name="normal" type="Label" parent="background/difficulty/modes"]
margin_top = 111.0
margin_right = 324.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 2 )
text = "normal"
align = 1
valign = 1

[node name="hard" type="Label" parent="background/difficulty/modes"]
margin_top = 193.0
margin_right = 324.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 2 )
text = "hard"
align = 1
valign = 1

[node name="environment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="selection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0

[connection signal="show_mode_menu" from="background/modes/1_player" to="background/difficulty" method="_on_1_player_show_mode_menu"]
[connection signal="difficulty_menu_closed" from="background/difficulty" to="background/modes/1_player" method="_on_difficolty_difficulty_menu_closed"]
[connection signal="launch_one_player_mode" from="background/difficulty" to="background/modes/1_player" method="_on_difficolty_launch_one_player_mode"]
